UtahLiveDataTest/src/objects/PreApplication__c.object
<CustomObject>
    <fields>
        <fullName>RenderDeleteButton__c</fullName>
        <formula>IF($User.ProfileName__c = &apos;System Administrator&apos;,false,NOT(AND(OR(Text(Status__c) = &apos;In Progress&apos;,Text(Status__c) = &apos;Complete&apos;) , CreatedById = $User.Id )) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Render Delete Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RenderEditButton__c</fullName>
        <formula>IF(
$User.ProfileName__c = &apos;System Administrator&apos;,
false,
IF(
TEXT($User.UserType)= &apos;Internal&apos;,
true,
NOT(OR(
AND(TEXT(Status__c) == &apos;Submitted&apos; , Announcement__r.CloseDate__c &gt; TODAY(), Announcement__r.AllowEditingSubmittedPreApplication__c ),
Text(Status__c) = &apos;In Progress&apos;,Text(Status__c) = &apos;Complete&apos;
)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Render Edit Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RenderRecordCompleteMessgae__c</fullName>
        <formula>AND(text(Status__c) = &apos;Complete&apos;, RecordComplete__c = TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Render Record Complete Messgae</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RequestAssistanceAmount__c</fullName>
        <label>Request Assistance Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RequestedAmount__c</fullName>
        <label>Requested Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SelectedforApprovalAction__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field is updated to checked when the Final Approver selects the Pre-Application to Approve or Reject</inlineHelpText>
        <label>Selected for Approval Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SenttoGrantorButton__c</fullName>
        <formula>OR(ISPICKVAL( Status__c , &apos;Created&apos;),
ISPICKVAL( Status__c , &apos;Reviewed&apos;),
ISPICKVAL( Status__c , &apos;Rejected&apos;),
ISPICKVAL( Status__c , &apos;Converted to Application&apos;),
ISPICKVAL(Status__c , &apos;Submitted for Approval&apos;),
ISPICKVAL( Status__c , &apos;Submitted to Grantor&apos;),
DaysLeft__c&lt;1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sent to Grantor Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ServiceAreaInfo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Project Area</label>
        <referenceTo>ApplicationServiceArea__c</referenceTo>
        <relationshipLabel>Pre-Applications</relationshipLabel>
        <relationshipName>Pre_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShowDeleteLinkDecision__c</fullName>
        <description>Decision field to show if the Delete link for PreApplication should be available in the Flex table</description>
        <formula>OR((ISPICKVAL(Status__c,&apos;Approved&apos;)),(ISPICKVAL(Status__c,&apos;Change Requested&apos;)))</formula>
        <label>Show Delete Link Decision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StateProgram__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The State Program to which this PreApplication or Application belongs</description>
        <label>State Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Pre-Applications</relationshipLabel>
        <relationshipName>Pre_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                    <default>true</default>
                    <label>Created</label>
                </value>
                <value>
                    <fullName>Reviewed</fullName>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Submitted to Grantor</fullName>
                </value>
                <value>
                    <fullName>Awarded</fullName>
                </value>
                <value>
                    <fullName>Not Awarded</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Change Requested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubmissionDate1__c</fullName>
        <label>Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SubmissionDate2__c</fullName>
        <label>Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SubmissionDate3__c</fullName>
        <label>Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SubmitApplication__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Would be Submitting Application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SubmittedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Preapplications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubmittedOn__c</fullName>
        <description>Date when the application was submitted.</description>
        <label>Submitted On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SubmittedToInternal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submitted to Internal?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Submitted_to_Internal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submitted to Internal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TitleRef2__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TitleRef3__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>The grantee entered title for the application.</description>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>TrackingNumber</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TypeOfApplication__c</fullName>
        <description>Specifies the Type of the Application</description>
        <label>Type Of Application</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Continuation</fullName>
                </value>
                <value>
                    <fullName>Revision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TypeOfEducationHelp__c</fullName>
        <label>Type Of Education Help</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TypeOfEducationProvided__c</fullName>
        <label>Type Of Education Provided</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TypeOfMedicalHelpProvided__c</fullName>
        <label>Type Of Medical Help Provided</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TypeOfServiceProvided__c</fullName>
        <label>Type Of Service Provided</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TypeOfServiceProvidedtoStudents__c</fullName>
        <label>Type Of Service Provided</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>VersionID__c</fullName>
        <description>The version of the application. In most cases there will only be one version, but during the negotiation process if applicants are required to submit revised applications, or for administrative reasons changes are made to any application, the original version and each subsequent revision are always available and maintained in their entirety for auditing purpose.</description>
        <label>Version ID</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Pre-Application</label>
    <nameField>
        <label>ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pre-Applications</pluralLabel>
    <recordTypes>
        <fullName>Grantee</fullName>
        <active>true</active>
        <description>This Record Type is Used by the Grantee Application/Module</description>
        <label>Grantee</label>
    </recordTypes>
    <recordTypes>
        <fullName>Grantor</fullName>
        <active>true</active>
        <description>This Record Type is Used by the Grantor Applicaion/Module</description>
        <label>Grantor</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>PreApplication_After_Submission_Sharing__c</fullName>
        <label>PreApplication After Submission Sharing</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Sharing_for_Peer_Review_Author__c</fullName>
        <label>Sharing for Peer Review Author</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Sharing_for_Review__c</fullName>
        <label>Sharing for Review</label>
    </sharingReasons>
</CustomObject>